--- a/auth_api/node/package.json
+++ b/auth_api/node/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/wizeline/wize-devops.git"
   },
-  "author": "Clemente Estrada",
+  "author": "Rafasu",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/wizeline/wize-devops/issues"
@@ -22,6 +22,9 @@
     "body-parser": "^1.19.0",
     "config": "^1.30.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.0",
     "npm": ">=6.14.6",
     "restify": "^7.1.1"
   },
